<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >

    <LinearLayout style="@style/ActionBarCompat" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:scaleType="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f9fe"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/dashboard"
            android:textColor="#ff29549f"
            android:textSize="25sp"
           
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#808080" />

        <com.sukavi.pm4w.customlayouts.DashboardLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/btn_water_users"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_water_users"
                android:text="@string/water_users" />

            <Button
                android:id="@+id/btn_sales"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_sales"
                android:text="@string/sales" />

            <Button
                android:id="@+id/btn_savings"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_savings"
                android:text="@string/savings" />

            <Button
                android:id="@+id/btn_expenditures"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_expenditures"
                android:text="@string/expenditures" />

            <Button
                android:id="@+id/btn_account"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_account"
                android:text="@string/account" />

            <Button
                android:id="@+id/btn_transparent"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_transparent" />
        </com.sukavi.pm4w.customlayouts.DashboardLayout>
    </LinearLayout>

</LinearLayout>