<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >

    <LinearLayout style="@style/ActionBarCompat" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dip"
            android:scaleType="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f9fe"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingLeft="0dip"
            android:paddingRight="15dip"
            android:paddingTop="15dip"
            android:text="@string/sales"
            android:textColor="#ff29549f"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#808080" />

        <com.sukavi.pm4w.customlayouts.DashboardLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f8f9fe"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_daily_sale"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_add_daily_sales"
                android:text="@string/daily_sale" />

            <Button
                android:id="@+id/btn_monthly_billing"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_add_monthly_sales"
                android:text="@string/monthly_billing" />

            <Button
                android:id="@+id/btn_followup"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/btn_follow_up"
                android:text="@string/follow_up" />
            
        </com.sukavi.pm4w.customlayouts.DashboardLayout>
    </LinearLayout>

</LinearLayout>