<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >

    <LinearLayout style="@style/ActionBarCompat" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dip"
            android:scaleType="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f9fe"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f9fe"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingLeft="0dip"
                android:paddingRight="15dip"
                android:paddingTop="15dip"
                android:text="@string/add_expense"
                android:textColor="#ff29549f"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#808080" />

            <TextView
                android:id="@+id/water_source_TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="left"
                android:text="@string/water_source_prompt"
                android:textColor="#333333"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/water_source_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/water_sources_array"
                android:prompt="@string/water_source_prompt" />

            <TextView
                android:id="@+id/repairtypes_Textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="left"
                android:text="@string/repair_type"
                android:textColor="#333333"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/repairtypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/repairtypes_array"
                android:prompt="@string/repairtype_prompt" />

            <TextView
                android:id="@+id/expenditure_cost_Textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="left"
                android:text="@string/expenditure_cost"
                android:textColor="#333333"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/expenditure_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_top_bg"
                android:hint="@string/expenditure_cost"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" />

            <TextView
                android:id="@+id/benefactor_Textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="left"
                android:text="@string/benefactor"
                android:textColor="#333333"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/benefactor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_top_bg"
                android:hint="@string/benefactor"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" />

            <TextView
                android:id="@+id/description_Textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="#333333"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_top_bg"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" />

            <Button
                android:id="@+id/add_expense_button"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_submit"
                android:onClick="addExpense"
                android:text="@string/save_expenditure"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>